# Blackjack_GameOpenGL

./: .gitignore  CMakeLists.txt
inc/glad/: glad.h
libs/: freetyped.lib  glfw3.lib  glm.lib
src/: Card.cpp  Card.h  Game.cpp  Game.h  Main.cpp  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  glad.c
